Fix footer overlapping

--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,7 @@
 }
 
 html {
+  min-height: 100%;
   height: 100%;
 }
 
@@ -174,20 +175,20 @@ body {
   border: none !important;
 }
 
-/* FOOTER */
-footer {
+/* credits */
+.credits {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 1em 0;
 }
 
-footer a {
+.credits a {
   font-size: 0.75rem;
   text-decoration: none;
 }
 
-footer img {
+.credits img {
   height: 20px;
   margin-right: 0.5em;
 }
